# opencv-5g

./: .gitignore  CMakeLists.txt
config/: config.json
src/: cone_detector.hpp  config.hpp  garage.hpp  guided.h  guided_main.cpp  image_Q.cpp  image_Q.hpp  line_detection.cpp  main.cpp
